envoy.tmpl.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_protocol_options:
                  # support http 1.0 for use with ab for demo of rate limit
                  accept_http_10: true
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: app
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app
                            timeout: 15s

                            # Retry
                            retry_policy:
                              retry_on: "5xx"
                              num_retries: 3
                              per_try_timeout: 5s

                http_filters:

                  # Auth
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.filter.http.jwt_authn.v2alpha.JwtAuthentication
                      providers:
                        auth0:
                          issuer: "https://${AUTH0_DOMAIN}/"
                          audiences:
                            - "${API_AUDIENCE}"
                          forward_payload_header: x-jwt-payload
                          payload_in_metadata: auth_jwt
                          remote_jwks:
                            http_uri:
                              uri: "https://${AUTH0_DOMAIN}/.well-known/jwks.json"
                              cluster: auth0
                              timeout: 5s
                            cache_duration:
                              seconds: 3600
                      rules:
                        - match:
                            prefix: "/rbac"
                          requires:
                            provider_and_audiences:
                              provider_name: auth0
                              audiences: envoy-demo
                        - match:
                            prefix: "/secure"
                          requires:
                            provider_and_audiences:
                              provider_name: auth0
                              audiences: envoy-demo

                  # RBAC
                  - name: envoy.filters.http.rbac
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                      rules:
                        action: ALLOW
                        policies:
                          "rbac-yes":
                            principals:
                              - metadata:
                                  filter: envoy.filters.http.jwt_authn
                                  path:
                                    - key: auth_jwt
                                    - key: scope
                                  value:
                                    string_match:
                                      contains: "${SCOPE}"
                            permissions:
                              - url_path:
                                  path:
                                    prefix: "/rbac-yes"
                          "rbac-no":
                            principals:
                              - metadata:
                                  filter: envoy.filters.http.jwt_authn
                                  path:
                                    - key: auth_jwt
                                    - key: scope
                                  value:
                                    string_match:
                                      contains: unassigned-scope
                            permissions:
                              - url_path:
                                  path:
                                    prefix: "/rbac-no"
                          "otherwise":
                            principals:
                              - any: true
                            permissions:
                              - not_rule:
                                  url_path:
                                    path:
                                      prefix: "/rbac"

                  # Local Rate limit
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                      token_bucket:
                        max_tokens: 10
                        tokens_per_fill: 10
                        fill_interval: 1s
                      filter_enabled:
                        runtime_key: local_rate_limit_enabled
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        runtime_key: local_rate_limit_enforced
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      response_headers_to_add:
                        - append: false
                          header:
                            key: x-local-rate-limit
                            value: 'true'

                  # HTTP Cache
                  - name: envoy.filters.http.cache
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cache.v3alpha.CacheConfig
                      typed_config:
                        "@type": type.googleapis.com/envoy.source.extensions.filters.http.cache.SimpleHttpCacheConfig
                      allowed_vary_headers:
                        - exact: x-api-key
                          ignore_case: true

                  - name: envoy.filters.http.router

  clusters:
    - name: app
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app
                      port_value: 8080

    - name: auth0
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: auth0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "${AUTH0_DOMAIN}"
                      port_value: 443

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: "${AUTH0_DOMAIN}"
